# django-sqlcommenter

./: pyproject.toml  requirements.txt
django_sqlcommenter/: __init__.py  middleware.py  query_wrapper.py  utils.py
tests/: test_smoke.py
